lab_08/AST/src/parser/TSmmParser.java
// Generated from /Users/marcelo/Desktop/PracticasDLP/lab_06/AST/src/parser/TSmm.g4 by ANTLR 4.13.2
package parser;

    import ast.definition.*;
    import ast.expression.*;
    import ast.program.*;
    import ast.statement.*;
    import ast.type.*;

    import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
    import org.antlr.v4.runtime.tree.*;
import java.util.List;
    import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TSmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, WHITE=40, COMMENTS=41, REAL_CONSTANT=42, INT_CONSTANT=43, CHAR_CONSTANT=44, 
		ID=45;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_variableDefinition = 2, RULE_variables = 3, 
		RULE_functionDefinition = 4, RULE_params = 5, RULE_functionBody = 6, RULE_definitionMain = 7, 
		RULE_simple_type = 8, RULE_type = 9, RULE_record_field = 10, RULE_statement = 11, 
		RULE_block = 12, RULE_expression = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "variableDefinition", "variables", "functionDefinition", 
			"params", "functionBody", "definitionMain", "simple_type", "type", "record_field", 
			"statement", "block", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "':'", "';'", "','", "'function'", "'('", "')'", "'void'", 
			"'{'", "'}'", "'main'", "'int'", "'number'", "'char'", "'['", "']'", 
			"'log'", "'input'", "'='", "'if'", "'else'", "'while'", "'return'", "'.'", 
			"'as'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", 
			"'<='", "'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "WHITE", "COMMENTS", "REAL_CONSTANT", "INT_CONSTANT", 
			"CHAR_CONSTANT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TSmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TSmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<>();
		public DefinitionContext d;
		public DefinitionMainContext dM;
		public TerminalNode EOF() { return getToken(TSmmParser.EOF, 0); }
		public DefinitionMainContext definitionMain() {
			return getRuleContext(DefinitionMainContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(28);
					((ProgramContext)_localctx).d = definition();
					 _localctx.defs.addAll(((ProgramContext)_localctx).d.ast); 
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			((ProgramContext)_localctx).dM = definitionMain();
			 _localctx.defs.add(((ProgramContext)_localctx).dM.ast); 
			setState(38);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(_localctx.defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public VariableDefinitionContext vD;
		public FunctionDefinitionContext fD;
		public VariableDefinitionContext variableDefinition() {
			return getRuleContext(VariableDefinitionContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((DefinitionContext)_localctx).vD = variableDefinition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).vD.ast); 
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((DefinitionContext)_localctx).fD = functionDefinition();
				 _localctx.ast.add(((DefinitionContext)_localctx).fD.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDefinitionContext extends ParserRuleContext {
		public List<VarDef> ast = new ArrayList<>();
		public VariablesContext vs;
		public TypeContext t;
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__0);
			setState(50);
			((VariableDefinitionContext)_localctx).vs = variables();
			setState(51);
			match(T__1);
			setState(52);
			((VariableDefinitionContext)_localctx).t = type();
			setState(53);
			match(T__2);

			                          for(Variable v : ((VariableDefinitionContext)_localctx).vs.ast) {
			                              VarDef varDef = new VarDef(v.getName(), ((VariableDefinitionContext)_localctx).t.ast, v.getLine(), v.getColumn());
			                              _localctx.ast.add(varDef);
			                          }
			                      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesContext extends ParserRuleContext {
		public List<Variable> ast = new ArrayList<>();
		public Token id1;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((VariablesContext)_localctx).id1 = match(ID);
			 _localctx.ast.add(new Variable(((VariablesContext)_localctx).id1.getText(),
			                                     ((VariablesContext)_localctx).id1.getLine(),
			                                     ((VariablesContext)_localctx).id1.getCharPositionInLine()+1)); 
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(58);
				match(T__3);
				setState(59);
				((VariablesContext)_localctx).id2 = match(ID);
				 _localctx.ast.add(new Variable(((VariablesContext)_localctx).id2.getText(),
				                                     ((VariablesContext)_localctx).id2.getLine(),
				                                     ((VariablesContext)_localctx).id2.getCharPositionInLine()+1)); 
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FuncDef ast;
		public List<VarDef> prms = new ArrayList<>();
		public Type returnType;
		public Token name;
		public ParamsContext p;
		public Simple_typeContext st;
		public FunctionBodyContext b1;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public Simple_typeContext simple_type() {
			return getRuleContext(Simple_typeContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__4);
			setState(67);
			((FunctionDefinitionContext)_localctx).name = match(ID);
			setState(68);
			match(T__5);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(69);
				((FunctionDefinitionContext)_localctx).p = params();
				 ((FunctionDefinitionContext)_localctx).prms =  ((FunctionDefinitionContext)_localctx).p.ast; 
				}
			}

			setState(74);
			match(T__6);
			setState(75);
			match(T__1);
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
			case T__13:
				{
				setState(76);
				((FunctionDefinitionContext)_localctx).st = simple_type();
				 ((FunctionDefinitionContext)_localctx).returnType =  ((FunctionDefinitionContext)_localctx).st.ast; 
				}
				break;
			case T__7:
				{
				setState(79);
				match(T__7);
				 ((FunctionDefinitionContext)_localctx).returnType =  VoidType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(83);
			((FunctionDefinitionContext)_localctx).b1 = functionBody();

			                          FuncType fType = new FuncType(_localctx.returnType, _localctx.prms);
			                          ((FunctionDefinitionContext)_localctx).ast =  new FuncDef(((FunctionDefinitionContext)_localctx).name.getText(),
			                                             fType,
			                                             ((FunctionDefinitionContext)_localctx).b1.ast,
			                                             ((FunctionDefinitionContext)_localctx).name.getLine(),
			                                             ((FunctionDefinitionContext)_localctx).name.getCharPositionInLine()+1);
			                      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<VarDef> ast = new ArrayList<>();
		public Token id1;
		public Simple_typeContext st1;
		public Token id2;
		public Simple_typeContext st2;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public List<Simple_typeContext> simple_type() {
			return getRuleContexts(Simple_typeContext.class);
		}
		public Simple_typeContext simple_type(int i) {
			return getRuleContext(Simple_typeContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((ParamsContext)_localctx).id1 = match(ID);
			setState(87);
			match(T__1);
			setState(88);
			((ParamsContext)_localctx).st1 = simple_type();
			 _localctx.ast.add(new VarDef(((ParamsContext)_localctx).id1.getText(),
			                                ((ParamsContext)_localctx).st1.ast,
			                                ((ParamsContext)_localctx).id1.getLine(),
			                                ((ParamsContext)_localctx).id1.getCharPositionInLine()+1)); 
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(90);
				match(T__3);
				setState(91);
				((ParamsContext)_localctx).id2 = match(ID);
				setState(92);
				match(T__1);
				setState(93);
				((ParamsContext)_localctx).st2 = simple_type();
				 _localctx.ast.add(new VarDef(((ParamsContext)_localctx).id2.getText(),
				                                ((ParamsContext)_localctx).st2.ast,
				                                ((ParamsContext)_localctx).id2.getLine(),
				                                ((ParamsContext)_localctx).id2.getCharPositionInLine()+1)); 
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<>();
		public List<VarDef> varDefs = new ArrayList<>();
		public List<Statement> statements = new ArrayList<>();
		public VariableDefinitionContext vD;
		public StatementContext s;
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__8);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(102);
				((FunctionBodyContext)_localctx).vD = variableDefinition();
				 _localctx.varDefs.addAll(((FunctionBodyContext)_localctx).vD.ast); 
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 65970913017920L) != 0)) {
				{
				{
				setState(110);
				((FunctionBodyContext)_localctx).s = statement();
				 _localctx.statements.addAll(((FunctionBodyContext)_localctx).s.ast); 
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__9);

			                    _localctx.ast.addAll(_localctx.varDefs);
			                    _localctx.ast.addAll(_localctx.statements);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionMainContext extends ParserRuleContext {
		public FuncDef ast;
		public Token name;
		public FunctionBodyContext b1;
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public DefinitionMainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionMain; }
	}

	public final DefinitionMainContext definitionMain() throws RecognitionException {
		DefinitionMainContext _localctx = new DefinitionMainContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definitionMain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			((DefinitionMainContext)_localctx).name = match(T__10);
			setState(123);
			match(T__5);
			setState(124);
			match(T__6);
			setState(125);
			match(T__1);
			setState(126);
			match(T__7);
			setState(127);
			((DefinitionMainContext)_localctx).b1 = functionBody();

			                      List<VarDef> params = new ArrayList<>();
			                      Type fType = new FuncType(VoidType.getInstance(), params);
			                      ((DefinitionMainContext)_localctx).ast =  new FuncDef(((DefinitionMainContext)_localctx).name.getText(),
			                                         fType,
			                                         ((DefinitionMainContext)_localctx).b1.ast,
			                                         ((DefinitionMainContext)_localctx).name.getLine(),
			                                         ((DefinitionMainContext)_localctx).name.getCharPositionInLine()+1);
			                  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_typeContext extends ParserRuleContext {
		public Type ast;
		public Simple_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_type; }
	}

	public final Simple_typeContext simple_type() throws RecognitionException {
		Simple_typeContext _localctx = new Simple_typeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_simple_type);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(T__11);
				 ((Simple_typeContext)_localctx).ast =  IntType.getInstance(); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(T__12);
				 ((Simple_typeContext)_localctx).ast =  NumberType.getInstance(); 
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(T__13);
				 ((Simple_typeContext)_localctx).ast =  CharType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
